internal/pkg/parser/gen/graphql_parser.go
// Code generated from /Users/mpoindexter/dev/gq/grammar/Graphql.g4 by ANTLR 4.10.1. DO NOT EDIT.

package gen // Graphql
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GraphqlParser struct {
	*antlr.BaseParser
}

var graphqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func graphqlParserInit() {
	staticData := &graphqlParserStaticData
	staticData.literalNames = []string{
		"", "'['", "']'", "'{'", "'}'", "':'", "'@'", "'('", "')'", "'$'", "'='",
		"'!'", "'...'", "'&'", "'|'", "", "'null'", "'fragment'", "'query'",
		"'mutation'", "'subscription'", "'schema'", "'scalar'", "'type'", "'interface'",
		"'implements'", "'enum'", "'union'", "'input'", "'extend'", "'directive'",
		"'on'", "'repeatable'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "BooleanValue",
		"NullValue", "FRAGMENT", "QUERY", "MUTATION", "SUBSCRIPTION", "SCHEMA",
		"SCALAR", "TYPE", "INTERFACE", "IMPLEMENTS", "ENUM", "UNION", "INPUT",
		"EXTEND", "DIRECTIVE", "ON_KEYWORD", "REPEATABLE", "NAME", "IntValue",
		"FloatValue", "StringValue", "Ignored",
	}
	staticData.ruleNames = []string{
		"operationType", "description", "enumValue", "arrayValue", "arrayValueWithVariable",
		"objectValue", "objectValueWithVariable", "objectField", "objectFieldWithVariable",
		"directives", "directive", "arguments", "argument", "baseName", "fragmentName",
		"enumValueName", "name", "value", "valueWithVariable", "variable", "defaultValue",
		"gqlType", "typeName", "listType", "nonNullType", "operationDefinition",
		"variableDefinitions", "variableDefinition", "selectionSet", "selection",
		"field", "alias", "fragmentSpread", "inlineFragment", "fragmentDefinition",
		"typeCondition", "document", "typeSystemDefinition", "typeSystemExtension",
		"schemaDefinition", "schemaExtension", "operationTypeDefinition", "typeDefinition",
		"typeExtension", "emptyParentheses", "scalarTypeDefinition", "scalarTypeExtensionDefinition",
		"objectTypeDefinition", "objectTypeExtensionDefinition", "implementsInterfaces",
		"fieldsDefinition", "extensionFieldsDefinition", "fieldDefinition",
		"argumentsDefinition", "inputValueDefinition", "interfaceTypeDefinition",
		"interfaceTypeExtensionDefinition", "unionTypeDefinition", "unionTypeExtensionDefinition",
		"unionMembership", "unionMembers", "enumTypeDefinition", "enumTypeExtensionDefinition",
		"enumValueDefinitions", "extensionEnumValueDefinitions", "enumValueDefinition",
		"inputObjectTypeDefinition", "inputObjectTypeExtensionDefinition", "inputObjectValueDefinitions",
		"extensionInputObjectValueDefinitions", "directiveDefinition", "directiveLocation",
		"directiveLocations", "partialFieldDefinition", "partialObjectTypeDefinition",
		"partialInputObjectTypeDefinition", "partialInputValueDefinition", "partialEnumTypeDefinition",
		"partialInterfaceTypeDefinition", "partialUnionTypeDefinition", "partialScalarTypeDefinition",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GraphqlParserInit initializes any static state used to implement GraphqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGraphqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GraphqlParserInit() {
	staticData := &graphqlParserStaticData
	staticData.once.Do(graphqlParserInit)
}

// NewGraphqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGraphqlParser(input antlr.TokenStream) *GraphqlParser {
	GraphqlParserInit()
	this := new(GraphqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &graphqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "Graphql.g4"

	return this
}

// GraphqlParser tokens.
const (
	GraphqlParserEOF          = antlr.TokenEOF
	GraphqlParserT__0         = 1
	GraphqlParserT__1         = 2
	GraphqlParserT__2         = 3
	GraphqlParserT__3         = 4
	GraphqlParserT__4         = 5
	GraphqlParserT__5         = 6
	GraphqlParserT__6         = 7
	GraphqlParserT__7         = 8
	GraphqlParserT__8         = 9
	GraphqlParserT__9         = 10
	GraphqlParserT__10        = 11
	GraphqlParserT__11        = 12
	GraphqlParserT__12        = 13
	GraphqlParserT__13        = 14
	GraphqlParserBooleanValue = 15
	GraphqlParserNullValue    = 16
	GraphqlParserFRAGMENT     = 17
	GraphqlParserQUERY        = 18
	GraphqlParserMUTATION     = 19
	GraphqlParserSUBSCRIPTION = 20
	GraphqlParserSCHEMA       = 21
	GraphqlParserSCALAR       = 22
	GraphqlParserTYPE         = 23
	GraphqlParserINTERFACE    = 24
	GraphqlParserIMPLEMENTS   = 25
	GraphqlParserENUM         = 26
	GraphqlParserUNION        = 27
	GraphqlParserINPUT        = 28
	GraphqlParserEXTEND       = 29
	GraphqlParserDIRECTIVE    = 30
	GraphqlParserON_KEYWORD   = 31
	GraphqlParserREPEATABLE   = 32
	GraphqlParserNAME         = 33
	GraphqlParserIntValue     = 34
	GraphqlParserFloatValue   = 35
	GraphqlParserStringValue  = 36
	GraphqlParserIgnored      = 37
)

// GraphqlParser rules.
const (
	GraphqlParserRULE_operationType                        = 0
	GraphqlParserRULE_description                          = 1
	GraphqlParserRULE_enumValue                            = 2
	GraphqlParserRULE_arrayValue                           = 3
	GraphqlParserRULE_arrayValueWithVariable               = 4
	GraphqlParserRULE_objectValue                          = 5
	GraphqlParserRULE_objectValueWithVariable              = 6
	GraphqlParserRULE_objectField                          = 7
	GraphqlParserRULE_objectFieldWithVariable              = 8
	GraphqlParserRULE_directives                           = 9
	GraphqlParserRULE_directive                            = 10
	GraphqlParserRULE_arguments                            = 11
	GraphqlParserRULE_argument                             = 12
	GraphqlParserRULE_baseName                             = 13
	GraphqlParserRULE_fragmentName                         = 14
	GraphqlParserRULE_enumValueName                        = 15
	GraphqlParserRULE_name                                 = 16
	GraphqlParserRULE_value                                = 17
	GraphqlParserRULE_valueWithVariable                    = 18
	GraphqlParserRULE_variable                             = 19
	GraphqlParserRULE_defaultValue                         = 20
	GraphqlParserRULE_gqlType                              = 21
	GraphqlParserRULE_typeName                             = 22
	GraphqlParserRULE_listType                             = 23
	GraphqlParserRULE_nonNullType                          = 24
	GraphqlParserRULE_operationDefinition                  = 25
	GraphqlParserRULE_variableDefinitions                  = 26
	GraphqlParserRULE_variableDefinition                   = 27
	GraphqlParserRULE_selectionSet                         = 28
	GraphqlParserRULE_selection                            = 29
	GraphqlParserRULE_field                                = 30
	GraphqlParserRULE_alias                                = 31
	GraphqlParserRULE_fragmentSpread                       = 32
	GraphqlParserRULE_inlineFragment                       = 33
	GraphqlParserRULE_fragmentDefinition                   = 34
	GraphqlParserRULE_typeCondition                        = 35
	GraphqlParserRULE_document                             = 36
	GraphqlParserRULE_typeSystemDefinition                 = 37
	GraphqlParserRULE_typeSystemExtension                  = 38
	GraphqlParserRULE_schemaDefinition                     = 39
	GraphqlParserRULE_schemaExtension                      = 40
	GraphqlParserRULE_operationTypeDefinition              = 41
	GraphqlParserRULE_typeDefinition                       = 42
	GraphqlParserRULE_typeExtension                        = 43
	GraphqlParserRULE_emptyParentheses                     = 44
	GraphqlParserRULE_scalarTypeDefinition                 = 45
	GraphqlParserRULE_scalarTypeExtensionDefinition        = 46
	GraphqlParserRULE_objectTypeDefinition                 = 47
	GraphqlParserRULE_objectTypeExtensionDefinition        = 48
	GraphqlParserRULE_implementsInterfaces                 = 49
	GraphqlParserRULE_fieldsDefinition                     = 50
	GraphqlParserRULE_extensionFieldsDefinition            = 51
	GraphqlParserRULE_fieldDefinition                      = 52
	GraphqlParserRULE_argumentsDefinition                  = 53
	GraphqlParserRULE_inputValueDefinition                 = 54
	GraphqlParserRULE_interfaceTypeDefinition              = 55
	GraphqlParserRULE_interfaceTypeExtensionDefinition     = 56
	GraphqlParserRULE_unionTypeDefinition                  = 57
	GraphqlParserRULE_unionTypeExtensionDefinition         = 58
	GraphqlParserRULE_unionMembership                      = 59
	GraphqlParserRULE_unionMembers                         = 60
	GraphqlParserRULE_enumTypeDefinition                   = 61
	GraphqlParserRULE_enumTypeExtensionDefinition          = 62
	GraphqlParserRULE_enumValueDefinitions                 = 63
	GraphqlParserRULE_extensionEnumValueDefinitions        = 64
	GraphqlParserRULE_enumValueDefinition                  = 65
	GraphqlParserRULE_inputObjectTypeDefinition            = 66
	GraphqlParserRULE_inputObjectTypeExtensionDefinition   = 67
	GraphqlParserRULE_inputObjectValueDefinitions          = 68
	GraphqlParserRULE_extensionInputObjectValueDefinitions = 69
	GraphqlParserRULE_directiveDefinition                  = 70
	GraphqlParserRULE_directiveLocation                    = 71
	GraphqlParserRULE_directiveLocations                   = 72
	GraphqlParserRULE_partialFieldDefinition               = 73
	GraphqlParserRULE_partialObjectTypeDefinition          = 74
	GraphqlParserRULE_partialInputObjectTypeDefinition     = 75
	GraphqlParserRULE_partialInputValueDefinition          = 76
	GraphqlParserRULE_partialEnumTypeDefinition            = 77
	GraphqlParserRULE_partialInterfaceTypeDefinition       = 78
	GraphqlParserRULE_partialUnionTypeDefinition           = 79
	GraphqlParserRULE_partialScalarTypeDefinition          = 80
)

// IOperationTypeContext is an interface to support dynamic dispatch.
type IOperationTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOperationTypeContext differentiates from other interfaces.
	IsOperationTypeContext()
}

type OperationTypeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOperationTypeContext() *OperationTypeContext {
	var p = new(OperationTypeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphqlParserRULE_operationType
	return p
}

func (*OperationTypeContext) IsOperationTypeContext() {}

func NewOperationTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OperationTypeContext {
	var p = new(OperationTypeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphqlParserRULE_operationType

	return p
}

func (s *OperationTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *OperationTypeContext) SUBSCRIPTION() antlr.TerminalNode {
	return s.GetToken(GraphqlParserSUBSCRIPTION, 0)
}

func (s *OperationTypeContext) MUTATION() antlr.TerminalNode {
	return s.GetToken(GraphqlParserMUTATION, 0)
}

func (s *OperationTypeContext) QUERY() antlr.TerminalNode {
	return s.GetToken(GraphqlParserQUERY, 0)
}

func (s *OperationTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OperationTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OperationTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphqlListener); ok {
		listenerT.EnterOperationType(s)
	}
}

func (s *OperationTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphqlListener); ok {
		listenerT.ExitOperationType(s)
	}
}

func (s *OperationTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraphqlVisitor:
		return t.VisitOperationType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraphqlParser) OperationType() (localctx IOperationTypeContext) {
	this := p
	_ = this

	localctx = NewOperationTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GraphqlParserRULE_operationType)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(162)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<GraphqlParserQUERY)|(1<<GraphqlParserMUTATION)|(1<<GraphqlParserSUBSCRIPTION))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IDescriptionContext is an interface to support dynamic dispatch.
type IDescriptionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDescriptionContext differentiates from other interfaces.
	IsDescriptionContext()
}

type DescriptionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDescriptionContext() *DescriptionContext {
	var p = new(DescriptionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphqlParserRULE_description
	return p
}

func (*DescriptionContext) IsDescriptionContext() {}

func NewDescriptionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DescriptionContext {
	var p = new(DescriptionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphqlParserRULE_description

	return p
}

func (s *DescriptionContext) GetParser() antlr.Parser { return s.parser }

func (s *DescriptionContext) StringValue() antlr.TerminalNode {
	return s.GetToken(GraphqlParserStringValue, 0)
}

func (s *DescriptionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DescriptionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DescriptionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphqlListener); ok {
		listenerT.EnterDescription(s)
	}
}

func (s *DescriptionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphqlListener); ok {
		listenerT.ExitDescription(s)
	}
}

func (s *DescriptionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraphqlVisitor:
		return t.VisitDescription(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraphqlParser) Description() (localctx IDescriptionContext) {
	this := p
	_ = this

	localctx = NewDescriptionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GraphqlParserRULE_description)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(164)
		p.Match(GraphqlParserStringValue)
	}

	return localctx
}

// IEnumValueContext is an interface to support dynamic dispatch.
type IEnumValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEnumValueContext differentiates from other interfaces.
	IsEnumValueContext()
}

type EnumValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEnumValueContext() *EnumValueContext {
	var p = new(EnumValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GraphqlParserRULE_enumValue
	return p
}

func (*EnumValueContext) IsEnumValueContext() {}

func NewEnumValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EnumValueContext {
	var p = new(EnumValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GraphqlParserRULE_enumValue

	return p
}

func (s *EnumValueContext) GetParser() antlr.Parser { return s.parser }

func (s *EnumValueContext) EnumValueName() IEnumValueNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumValueNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumValueNameContext)
}

func (s *EnumValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EnumValueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphqlListener); ok {
		listenerT.EnterEnumValue(s)
	}
}

func (s *EnumValueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GraphqlListener); ok {
		listenerT.ExitEnumValue(s)
	}
}

func (s *EnumValueContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case GraphqlVisitor:
		return t.VisitEnumValue(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *GraphqlParser) EnumValue() (localctx IEnumValueContext) {
	this := p
	_ = this

	localctx = NewEnumValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GraphqlParserRULE_enumValue)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(166)
		p.EnumValueName()
	}

	return localctx
}

// IArrayValueContext is an interface to support dynamic dispatch.
type IArrayValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
